--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "index.js"
-    }
-  ],
-  "cleanUrls": true
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
 }
